--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,8 @@ jobs:
       start: npm start
 
   split:
-    uses: bahmutov/cypress-workflows/.github/workflows/split.yml@v1.8.0
+    uses: bahmutov/cypress-workflows/.github/workflows/split.yml@v1.9.0
     with:
       n: 3
       start: npm start
+      marge: true
